[package]
name = "iceman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["blocking", "rustls-tls"], default-features = false }
rppal = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
